Try this calendar

--- a/calendar.html
+++ b/calendar.html
@@ -320,7 +320,7 @@ h2 a img .sites-chrome-header-valign-middle {
                                                                                 <div class="sites-embed-border-off sites-embed sites-embed-full-width" style="width:100%;">
                                                                                     <div class="sites-embed-object-title" style="display:none;">Upcoming Performances</div>
                                                                                     <div class="sites-embed-content sites-embed-type-calendar">
-																						<iframe id="295790011" src="http://www.google.com/calendar/embed?src=spqbed4n59gc2s4p4ugfb26b4k@group.calendar.google.com&amp;color=%23668CD9&amp;showTitle=1&amp;showNav=1&amp;showDate=1&amp;showTabs=1&amp;showCalendars=0&amp;hl=en" title="Upcoming Performances" width="100%" height="550" frameborder="0" scrolling="no"></iframe>
+																						<iframe src="https://calendar.google.com/calendar/embed?src=spqbed4n59gc2s4p4ugfb26b4k%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="100%" height="550" frameborder="0" scrolling="no"></iframe>
 																					</div>
                                                                                 </div>
                                                                             </div>
